2008-10-12  William Pursell <bill.pursell@gmail.com>  (tiny patch)

	* tests/defs.in: Fix comment typo.

2008-10-12  William Pursell <bill.pursell@gmail.com>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix grammar w.r.t. plurals in test reports.
	* lib/am/check.am: Fix singular/plural forms in test reports.
	* tests/check10.test: New test.
	* tests/Makefile.am: Update.

2008-10-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Require texi2dvi in tests, makeinfo may not be enough.
	* tests/txinfo16.test: RHEL 5.2 has makeinfo and texi2dvi in
	separate packages, so also list the latter as required, as the
	test generates DVI and/or PDF output (through distcheck).
	* tests/txinfo18.test: Likewise.
	* tests/txinfo21.test: Likewise.
	* tests/txinfo22.test: Likewise.
	* tests/txinfo3.test: Likewise.
	* tests/version7.test: Likewise.
	* THANKS: Update.
	Report by Alexander Martens.

	Fix bootstrap to remove read-only directories right.
	* bootstrap: Remove automake-$APIVERSION correctly.

2008-10-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Improve test coverage of current TESTS semantics.
	* tests/check8.test: New test, for subdir tests and setting of
	$srcdir.
	* tests/check9.test: New test, check @substituted@ TESTS.
	* tests/Makefile.am: Update.

2008-10-05  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* m4/minuso.m4 (AM_PROG_CC_C_O): Work around shell quoting issue
	with AIX sh; fixes depcomp6.test failure.
	* NEWS, THANKS: Update.
	Report by Rainer Tammer.

	Print captured output before failing.
	* tests/acloca14.test, tests/acloca17.test, tests/acloca18.test,
	tests/aclocal.test, tests/acsilent.test, tests/alpha.test,
	tests/check4.test, tests/fn99.test,
	tests/fn99subdir.test, tests/help.test, tests/init.test,
	tests/lisp8.test, tests/missing3.test, tests/pr220.test,
	tests/python11.test, tests/python4.test, tests/python5.test,
	tests/unused.test, tests/version8.test: When exit is called
	after a command that has stdout or stderr redirected to a file