@@ -3695,7 +3695,7 @@ sub handle_dist ()
 
 # check_directory ($NAME, $WHERE)
 # -------------------------------
-# Ensure $NAME is a directory, and that it uses sane name.
+# Ensure $NAME is a directory, and that it uses a sane name.
 # Use $WHERE as a location in the diagnostic, if any.
 sub check_directory ($$)
 {
@@ -7228,7 +7228,7 @@ sub require_file_internal ($$$@)
 			  # an auxiliary file and we are not processing
 			  # the top level Makefile.  Furthermore Automake
 			  # hasn't been asked to create the Makefile.in
-			  # that distribute the aux dir files.
+			  # that distributes the aux dir files.
 			  error ($where, 'Please make a full run of automake'
 				 . " so $fullfile gets distributed.");
 			}
