@@ -1,3 +1,11 @@
+2008-10-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Fix comment typos.
+	* automake.in (require_file_internal): Fix typos in comments.
+	* m4/amversion.in: Likewise.
+	* lib/Automake/Variable.pm: Likewise.
+	* lib/Automake/XFile.pm: Likewise.
+
 2008-10-12  William Pursell <bill.pursell@gmail.com>  (tiny patch)
 
 	* tests/defs.in: Fix comment typo.
